--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head><title>Higher or Lower</title></head>
+<head><title>Start Game</title></head>
 <body>
-    <h1>Current Card: {{ card }}</h1>
-    <a href="{% url 'play' %}?guess=higher">Higher</a> |
-    <a href="{% url 'play' %}?guess=lower">Lower</a>
+    <h1>Card: {{ card }}</h1>
+    <form method="post" action="{% url 'play' %}">
+        {% csrf_token %}
+        <button type="submit" name="guess" value="higher">Higher</button>
+        <button type="submit" name="guess" value="lower">Lower</button>
+    </form>
 </body>
 </html>
